# cs-flythrough

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-03-14-cs-flythrough-skateboard.md  2026-03-15-headless-rendering.md
docs/superpowers/specs/: 2026-03-14-cs-flythrough-design.md  2026-03-15-headless-rendering-design.md
src/: camera.rs  capture.rs  config.rs  headless.rs  input.rs  lib.rs  log.rs  main.rs  maplist.rs  renderer.rs
src/bsp/: entity.rs  mod.rs  nav.rs  parse.rs  wad.rs
src/shaders/: geometry.wgsl  sky.wgsl
tests/: bsp_integration.rs
